[tool.poetry]
name = "osm-fetch"
version = "0.1.0"
description = "A cute project dedicated to fetching geometries from OpenStreetMap using the Overpass QL API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "osm_fetch"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
geopandas = "0.11.*"
pandas = "^1.5.3"
numpy = "^1.24.1"
scipy = "^1.10.0"
tenacity = "^8.1.0"
rasterio = "1.3.2"
matplotlib = "^3.6.3"
requests = "^2.28.2"
rtree = "^1.0.1"
jupyterlab = "^3.6.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'E722', 'E731', 'W503', 'F403', 'F401']
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
per-file-ignores = [
    '__init__.py:F401',
]
exclude = [ '.venv' ]

max-line-length = 88
count = true

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'
known_third_party = ''
